webpack creating an Electron bundle

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Sanus</title>
-  <link rel="stylesheet" href="node_modules/tachyons/css/tachyons.min.css">
+  <link rel="stylesheet" href="./tachyons.min.css">
 </head>
 
 <body class="sans-serif">
   <div id="app">
 </body>
-<script>require('./src/app.js')</script>
+<script>require('./app.js')</script>
 
 </html>
